<resources>
    <string name="app_name">Sirius</string>
    <string name="total_balance">İşleme Ait Bakiye:</string>
    <string name="space"></string>
    <string name="profil">Profil</string>
    <string name="k">Çıkış</string>
    <string name="otomatlar">Otomatlar</string>
    <string name="email">E-mail</string>
    <string name="password">Parola</string>
    <string name="name">İsim</string>
    <string name="surname">Soyisim</string>
    <string name="scan_qr">QR Kodu Tara</string>
    <string name="scan_qr_info">Otomat ile bağ kurup işleme başlamanız için, lütfen otomatın ekranında sunulan QR kodunu taratınız.</string>
    <string name="scan_barcode">Barkodu Tara</string>
    <string name="scan_barcode_info">Otomata yerleştirmeden önce, lütfen şişenin barkodunu okutunuz.</string>
    <string name="login">Hesaba Giriş</string>
    <string name="login_button">Giriş</string>
    <string name="username">E-mail</string>
    <string name="passowrd">Parola</string>
    <string name="newUser">Hesap oluşturmak için tıklayın.</string>
    <string name="signIn">Giriş yapmak için tıklayın.</string>
    <string name="newUserTitle">Yeni Üyelik</string>
    <string name="newUserButton">ÜYELİK OLUŞTUR</string>
    <string name="edit"></string>
    <string name="user"></string>
    <string name="userpicture"></string>
    <string name="newPassword">Yeni Şifre</string>
    <string name="settings">Ayarlar</string>
    <string name="newPasswordSuccess">Şifre değiştirme işlemi başarıyla gerçekleştirilmiştir.</string>
    <string name="newPasswordButton">Şifreyi Değiştir</string>
    <string name="error">Bir sorun oluştu. Daha sonra tekrar deneyiniz.</string>
    <string name="add">Bakiyeye Ekle</string>
    <string name="donation">Bağış</string>
    <string name="coin" />
    <string name="default_notification_channel_id">s2</string>
    <string name="bottle_verified_info">Şişeniz doğrulanmıştır. Lütfen otomat ekranından hangi işlem ile devam edeceğinizi seçiniz.</string>
    <string name="bottle_verified_info2">Bu işlemden kazandığınız miktar:</string>
    <string name="bottle_notverified_info">Şişeniz kabul edilmemiştir. Lütfen otomat ekranından hangi işlem ile devam edeceğinizi seçiniz.</string>
    <string name="close_door_info">Şişenin gösterilen şekilde yerleştirildiğinden emin olduktan sonra tarama işlemine başlanması için
        aşağıdaki düğmeye basıp otomatın kapağının kapanması için talimat veriniz.</string>
    <string name="close_door_next">Kapağı kapat</string>
    <string name="waiting_text">Gerekli işlemler yapılmaktadır.</string>
    <string name="waiting_text2">Lütfen otomat ekranındaki talimatlara uyunuz...</string>
    <string name="waiting_text3">Lütfen bekleyiniz...</string>
    <string name="profile">Toplam Bakiye</string>
    <string name="donationMoney">Bağış Yapılacak Tutar</string>
    <string name="a" />
    <string name="addButton">add</string>
    <string name="map_not_ready">Harita hazırlanamadı.Bekleyiniz...</string>
    <string name="info_window_click">Bağlantı kurmak için lütfen ekranın sol alt köşesindeki tuşa basınız.</string>
    <string name="location_permission_denied">Konum erişme isteği reddedildi.</string>
    <string name="permission_required_toast">İsteğin kabul edilmesi zorunludur.</string>
    <string name="permission_rationale_location">Konum gösterilebilmesi için izin verilmesi zorunludur.</string>
    <string name="timeout_profile">Gereken sürede işlem yapamadınız. Lütfen tekrar deneyiniz.</string>

</resources>
