<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--    Guidelines-->

    <EditText
        android:id="@+id/password"
        android:layout_width="313dp"
        android:layout_height="61dp"
        android:layout_marginTop="184dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:hint="@string/space"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/end"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="@+id/startOfFields"
        app:layout_constraintTop_toBottomOf="@+id/userProfileToolbar" />

    <TextView
        android:id="@+id/newPass"
        android:layout_width="315dp"
        android:layout_height="70dp"
        android:layout_marginTop="104dp"
        android:text="@string/newPassword"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/end"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/startOfFields"
        app:layout_constraintTop_toBottomOf="@+id/userProfileToolbar" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="248dp"
        android:layout_height="66dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/rounded_corner_button"
        android:padding="12dp"
        android:text="@string/newPasswordButton"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/end"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/startOfFields"
        app:layout_constraintTop_toTopOf="@+id/topOfValues" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startOfFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topOfValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9026764" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/userProfileToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolBarColor"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_main"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title=" "
        app:titleTextColor="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>